--- a/ejercicio-01/index.html
+++ b/ejercicio-01/index.html
@@ -1,75 +1,21 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi App</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Aqui se colocan bibliotecas externas -->
-    <!-- Aqui se colocan bibliotecas internas -->
-    <!-- Aqui se colocan bibliotecas internas -->
-    <!-- Aqui se colocan bibliotecas externas -->
-    <!-- <style>
-      h1 {
-        color: red;
-        font-size: 40px;
-      }
-      h2 {
-        color: lightcoral;
-        font-size: 20px;
-      }
-      div {
-        background-color: brown;
-        width: 200px;
-        height: 200px;
-        border: 3px solid black;
-        padding-top: 40px;
-        padding-left: 40px;
-      }
-   </style> -->
-  </head>
-  <body>
-    <h1>Estudiando el DOM - Telematica 2022</h1>
-    <h1>Estudiando el DOM - Telematica 2022 version2</h1>
-    <h2>Document Object Model</h2>
-    <h3>BOX-MODEL</h3>
-    <h4>Todo en HTML es una caja: Ancho - Alto - Borde - Margenes</h4>
-    <h2>Elementos DIV</h2>
-    <!-- <div>Caja 1</div>
-    <div>Caja 2</div>
-    <div>Caja 3</div>
-    <div>Caja 4</div> -->
-    <hr>
-    <br>
-    <h2>Elemenos de Interaccion</h2>
-    <hr>
-    <input type="text">
-    <input type="password">
-    <input type="checkbox">
-    <input type="datetime">
-    <input type="submit">
-    <hr>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="./styles.css">
+    <title>MiApp</title>
+</head>
+<body>
     <div class="container">
-        <button class="btn-johan" id="btn-johan">Mi Boton</button>
+        <div class="login-page">
+            <form action="">
+                <input type="text" placeholder="usuario">
+                <input type="password" placeholder="constraseña">
+                <button class="btn-login">Login</button>
+            </form>
+        </div>
     </div>
-    <button class="btn-laura" id="btn-laura">Botton de Laura</button>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </body>
+</body>
 </html>
