--- a/ejercicio-01/index.html
+++ b/ejercicio-01/index.html
@@ -1,21 +1,23 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./styles.css" />
+
     <title>MiApp</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="login-page">
-            <form action="">
-                <input type="text" placeholder="usuario">
-                <input type="password" placeholder="constraseña">
-                <button class="btn-login">Login</button>
-            </form>
-        </div>
+      <div class="login-page">
+        <form action="">
+          <input id='user'value="johan" type="text" placeholder="usuario" />
+          <input type="password" placeholder="constraseña" />
+          <button id='login' class="btn-login">Login</button>
+        </form>
+      </div>
     </div>
-</body>
+    <script src="./index.js"></script>
+  </body>
 </html>
