--- a/ejercicio-01/index.html
+++ b/ejercicio-01/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="login-page">
-        <form action="">
+        <form action="#">
           <input id='user'value="johan" type="text" placeholder="usuario" />
           <input type="password" placeholder="constraseña" />
           <button id='login' class="btn-login">Login</button>
